force-app/main/default/objects/Reminder_Schedule__c/Reminder_Schedule__c.object-meta.xml
<CustomObject>
    <label>Reminder Schedule</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Reminder Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>