force-app/main/default/objects/Reminder_Schedule__c/fields/Days_reminds__c.field-meta.xml
<CustomField>
    <fullName>Days_reminds__c</fullName>
    <formula>BLANKVALUE(&quot;First = &quot; + TEXT(First_Reminder_day__c) + &quot;;&quot; + &quot; &quot;, &quot;&quot;)+  
 BLANKVALUE(&quot;Second = &quot; + TEXT(Second_Reminder_day__c), &quot;&quot;)</formula>
    <label>Reminder days</label>
    <type>Text</type>
</CustomField>