force-app/main/default/objects/Reminder_Schedule__c/fields/First_Reminder_day__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder_day__c</fullName>
    <inlineHelpText>Define how many days should pass before 1st reminder email is sent to a Participant in case Survey Task is still pending</inlineHelpText>
    <label>First Reminder day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>