force-app/main/default/objects/Reminder_Schedule__c/fields/Second_Reminder_day__c.field-meta.xml
<CustomField>
    <fullName>Second_Reminder_day__c</fullName>
    <inlineHelpText>Define how many days should pass before the Final reminder email is sent to a Participant in case Survey Task is still pending</inlineHelpText>
    <label>Second Reminder day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>