force-app/main/default/objects/Reminder_Schedule__c/fields/Use_Final_Template__c.field-meta.xml
<CustomField>
    <fullName>Use_Final_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if sending only 1 reminder and you want to use the final reminder email.</inlineHelpText>
    <label>Use Final Template</label>
    <type>Checkbox</type>
</CustomField>