force-app/main/default/objects/Reminder_Schedule__c/validationRules/Bigger_than_first.validationRule-meta.xml
<ValidationRule>
    <fullName>Bigger_than_first</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT(ISBLANK(First_Reminder_day__c)),   
     (Second_Reminder_day__c &lt; First_Reminder_day__c)
)</errorConditionFormula>
    <errorMessage>Second day must be greater than first</errorMessage>
</ValidationRule>