force-app/main/default/objects/Reminder_Schedule__c/validationRules/First_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>First_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( ISBLANK( Second_Reminder_day__c ) ), 
 ISBLANK( First_Reminder_day__c )
)</errorConditionFormula>
    <errorMessage>First reminder day is necessary</errorMessage>
</ValidationRule>