force-app/main/default/objects/Reminder_Schedule__c/validationRules/Just_Final_Reminder.validationRule-meta.xml
<ValidationRule>
    <fullName>Just_Final_Reminder</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT( ISBLANK( Second_Reminder_day__c )  ),
     Use_Final_Template__c  = true
)</errorConditionFormula>
    <errorMessage>When a First Reminder and Second Reminder are configured, the Final Reminder email option is not needed.</errorMessage>
</ValidationRule>