force-app/main/default/objects/Reminder_Schedule__c/validationRules/Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>First_Reminder_day__c &lt; 0</errorConditionFormula>
    <errorDisplayField>First_Reminder_day__c</errorDisplayField>
    <errorMessage>Please enter zero or positive value</errorMessage>
</ValidationRule>