force-app/main/default/objects/Reminder_Schedule__c/validationRules/Reminder_Schedule_Cannot_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Reminder_Schedule_Cannot_Be_Edited</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
ISCHANGED (  First_Reminder_day__c ) ,
ISCHANGED (  Second_Reminder_day__c ) 
)</errorConditionFormula>
    <errorMessage>Editing Reminder schedule dates is not allowed as it might be associated with an existing Trial Survey. Please, create a new Reminder schedule instead.</errorMessage>
</ValidationRule>